<resources>
    <string name="app_name">BulbDJ</string>
    <string name="action_settings">Settings</string>
    <string name="auto_connect_start">Auto connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="input_hint">Light\'s serial number</string>
    <string name="search">Search</string>
    <string name="find">Find Light</string>
    <string name="setup">Setup</string>
    <string name="search_bridges">Search bridges</string>
    <string name="settings">Settings</string>
    <string name="random_lights">Random lights</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="brightness">Brightness</string>
    <string name="frequency">Frequency</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="action_find">Find light</string>
    <string name="action_adjust">Adjust</string>
    <string name="beatDetection">Beat detection</string>
    <string name="maxFPS">Max Freq. (ms):</string>
    <string name="mode_changed">Mode automatically changed</string>
    <string-array name="modes_array">
        <item name="AUTOMATIC">Automatic</item>
        <item name="POP">Pop</item>
        <item name="RAP">Rap</item>
        <item name="ROCK">Rock</item>
        <item name="DANCE">Dance</item>
        <item name="ELECTRO">Electro</item>
        <item name="ROMANTIC">Romantic</item>
    </string-array>
</resources>
