<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context="de.htwg.moco.bulbdj.activities.AdjustActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/adjust_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

        </android.support.design.widget.AppBarLayout>


        <Switch
            android:id="@+id/mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_small"
            android:checked="true"
            android:text="@string/beatDetection"
            android:textColor="@color/textColorSecondary" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_large">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_size_small"
                android:text="@string/maxFPS"
                android:textColor="@color/textColorSecondary" />

            <TextView
                android:id="@+id/delay"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_height_medium"
                android:layout_margin="@dimen/text_size_small"
                android:textColor="@color/textColorSecondary" />
        </GridLayout>

        <SeekBar
            android:id="@+id/delay_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_small" />

        <TextView
            android:id="@+id/textViewBrightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_small"
            android:text="@string/brightness"
            android:textColor="@color/textColorSecondary" />

        <SeekBar
            android:id="@+id/brightness_Bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_small"
            android:layout_marginStart="21dp" />

        <TextView
            android:id="@+id/text_view_sensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_small"
            android:text="@string/sensitivity"
            android:textColor="@color/textColorSecondary" />

        <SeekBar
            android:id="@+id/sensitivity_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_small" />

    </LinearLayout>
</ScrollView>